lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_string_prepare_append/buffer_string_prepare_append3/buffer_string_prepare_append3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_string_prepare_append/buffer_string_prepare_append3/buffer_string_prepare_append3.c:22:56: error: use of undeclared identifier 's__b'
    char * futag_target = buffer_string_prepare_append(s__b ,q_b__size );
                                                       ^
1 error generated.
